--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,17 @@
 <resources>
     <string name="app_name">Time Table</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 
     <!--    fragment main-->
     <string name="textView_programName">Program Name</string>
+
+<!--    fragment main recycler view row-->
+    <string name="textView_LessonName">Lesson Name</string>
+    <string name="textView_lecturerName">Lecturer Name</string>
+    <string name="textView_classRoom">Room 203</string>
+
+
+
 </resources>
