--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,21 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
-
     <!--    fragment main-->
     <string name="textView_programName">Program Name</string>
 
-<!--    fragment main recycler view row-->
+    <!--    fragment main recycler view row-->
     <string name="textView_LessonName">Lesson Name</string>
     <string name="textView_lecturerName">Lecturer Name</string>
     <string name="textView_classRoom">Room 203</string>
+    <string name="textView_absenteeism">Absenteeism: 0</string>
 
 
+    <!--    fragment details-->
+    <string name="textView_appBar">Details</string>
+    <string name="editText_lessonTextHint">Lesson Name</string>
+    <string name="editText_lecturerTextHint">Lecturer Name</string>
+    <string name="editText_classRoomHint">Classroom</string>
+    <string name="textView_addProgramText">Add Program</string>
 
 </resources>
