added details fragment into navigation framework

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -12,4 +12,6 @@
     <string name="editText_lecturerTextHint">Öğretmen Adı</string>
     <string name="editText_classRoomHint">Sınıf</string>
     <string name="textView_addProgramText">Program Ekle</string>
+    <string name="button_save">Kaydet</string>
+    <string name="button_cancel">İptal</string>
 </resources>
