--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -7,11 +7,22 @@
     <string name="textView_lecturerName">Öğretmen Adı</string>
     <string name="textView_classRoom">Derslik 203</string>
     <string name="textView_absenteeism">Devamsızlık: 0</string>
-    <string name="textView_appBar">Detaylar</string>
+    <string name="textView_appBar_details">Detaylar</string>
     <string name="editText_lessonTextHint">Ders Adı</string>
     <string name="editText_lecturerTextHint">Öğretmen Adı</string>
     <string name="editText_classRoomHint">Sınıf</string>
     <string name="textView_addProgramText">Program Ekle</string>
     <string name="button_save">Kaydet</string>
     <string name="button_cancel">İptal</string>
+    <string name="textView_appBar_addProg">Program Ekle</string>
+    <string-array name="Days">
+        <item>Pazartesi</item>
+        <item>Salı</item>
+        <item>Çarşamba</item>
+        <item>Perşembe</item>
+        <item>Cuma</item>
+        <item>Cumartesi</item>
+        <item>Pazar</item>
+    </string-array>
+    <string name="editText_dropDown_dayText">Hangi Gün</string>
 </resources>
