created time picker for addProgramFragment

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -25,4 +25,6 @@
         <item>Pazar</item>
     </string-array>
     <string name="editText_dropDown_dayText">Hangi Gün</string>
+    <string name="editText_dropDown_startTimeText">Başlama Saati</string>
+    <string name="editText_dropDown_finishTimeText">Bitiş Saati</string>
 </resources>
