--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
         <item>Sunday</item>
     </string-array>
     <string name="editText_dropDown_dayText">Which Day</string>
+    <string name="editText_dropDown_startTimeText">Start Time</string>
+    <string name="editText_dropDown_finishTimeText">Finish Time</string>
 
 
 </resources>
