--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     </string-array>
     <string name="editText_dropDown_absenteeismText">Right of absence</string>
     <string name="textView_reminderInfoText">You will receive the notification when the lesson time is approaching.</string>
+    <string name="description_goBack">Go to back</string>
+    <string name="description_whichDay">Which day</string>
 
 
 </resources>
