--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
         <item>Laboratory</item>
         <item>Practice</item>
     </string-array>
+    <string name="main_textView_error">There is something wrong!</string>
 
 
 </resources>
