created manage programs fragment and view models

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -48,4 +48,6 @@
     </string-array>
     <string name="main_textView_error">Bir sorun oldu!</string>
     <string name="emptyText">Program eklemek için + \'ya basın</string>
+    <string name="textView_manageProgram">Programlari Yönet</string>
+    <string name="textView_search">Ara</string>
 </resources>
