created manage program dialog and fixed some saving problems

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -50,4 +50,5 @@
     <string name="emptyText">Program eklemek için + \'ya basın</string>
     <string name="textView_manageProgram">Programlari Yönet</string>
     <string name="textView_search">Ara</string>
+    <string name="dialogEditText_progName">Program Adı</string>
 </resources>
